--- a/Template_web/Qualite-dArt/src/styles/style.css
+++ b/Template_web/Qualite-dArt/src/styles/style.css
@@ -1,6 +1,17 @@
+[data-bs-theme=dark]{
+    --body-bgMain: #fff;
+    --body-bg-DarkMain: #3D3D3D;
+}
+.bg-DarkMain{
+	background-color: #3D3D3D;
+    /*$white: var(--body-bg);*/
+}
+
+
 /* GLOBAL STYLES
 -------------------------------------------------- */
 /* Padding below the footer and lighter body text */
+
 
 body {
     padding-top: 3rem;
@@ -8,7 +19,7 @@ body {
     color: rgb(var(--bs-tertiary-color-rgb));
   }
   
-  
+
   /* CUSTOMIZE THE CAROUSEL
   -------------------------------------------------- */
   
@@ -80,3 +91,24 @@ body {
       margin-top: 7rem;
     }
   }
+
+  
+
+  #color{
+    background-color: rgb(0, 0, 0);  
+}
+
+#item {
+    color: aliceblue;
+  }
+
+/* Estilo personalizado para el fondo de los rellenables del formulario con el color #f9f8f2 */
+.custom-bg {
+    background-color: #f9f8f2;
+}
+
+/* Estilo personalizado para el sombreado */
+.custom-shadow {
+    box-shadow: 0 4px 3px rgba(0, 0, 0, 0.1);
+}
+
